<resources>
    <string name="app_name">搜神阅读</string>
    <string name="last_read">最后阅读</string>
    <string name="read_summary">肯定有比看书更好玩的事情。</string>
    <string name="receiving_shared_label">搜神阅读·搜索</string>
    <string name="bookshelf_empty">书架还空着，先去添加吧！</string>
    <string name="action_download">下载任务</string>
    <string name="action_list_grid">列表/网格</string>
    <string name="book_local">添加本地</string>
    <string name="book_source_manage">书源管理</string>
    <string name="setting">设置</string>
    <string name="theme_setting">主题设置</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="exit_no_save">还未保存,是否继续编辑</string>
    <string name="read_style">阅读样式设置</string>
    <string name="local">本地</string>
    <string name="search">搜索</string>
    <string name="net_error_10001">没有网络</string>
    <string name="net_error_10002">网络连接超时</string>
    <string name="net_error_10003">数据解析失败</string>
    <string name="origin_format">来源: %s</string>
    <string name="read_dur_progress">最近: %s</string>
    <string name="book_name">书名</string>
    <string name="book_search_last">最新: %s</string>
    <string name="check_add_bookshelf">是否将《%s》放入书架？</string>
    <string name="get_data_error">获取数据失败！</string>
    <string name="retry">重试</string>
    <string name="web_service">web服务</string>
    <string name="download_offline">离线下载</string>
    <string name="download_offline_t">离线下载</string>
    <string name="download_offline_s">下载选择的章节到本地</string>
    <string name="change_origin">换源</string>
    <string name="pt_auto_refresh">自动刷新</string>
    <string name="ps_auto_refresh">打开软件时自动更新书籍</string>
    <string name="pt_auto_download">自动下载最新章节</string>
    <string name="ps_auto_download">更新书籍时自动下载最新章节</string>
    <string name="backup">备份</string>
    <string name="restore">恢复</string>
    <string name="backup_permission">备份请给与存储权限</string>
    <string name="restore_permission">恢复请给与存储权限</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="backup_confirmation">确认备份吗？</string>
    <string name="backup_message">新备份会替换原有备份。\n备份文件夹YueDu</string>
    <string name="restore_confirmation">确认恢复吗？</string>
    <string name="restore_message">恢复书架会覆盖现有书架。</string>
    <string name="backup_success">备份成功</string>
    <string name="backup_fail">备份失败</string>
    <string name="on_restore">正在恢复</string>
    <string name="restore_success">恢复成功</string>
    <string name="restore_fail">恢复失败</string>
    <string name="screen_direction">屏幕方向</string>
    <string name="screen_sensor">跟随传感器</string>
    <string name="screen_landscape">横向</string>
    <string name="screen_portrait">竖向</string>
    <string name="screen_unspecified">跟随系统</string>
    <string name="interface_setting">界面</string>
    <string name="brightness">亮度</string>
    <string name="chapter_list">目录</string>
    <string name="next_chapter">下一章</string>
    <string name="previous_chapter">上一章</string>
    <string name="pt_hide_status_bar">隐藏状态栏</string>
    <string name="read_aloud">朗读</string>
    <string name="read_aloud_t">正在朗读</string>
    <string name="read_aloud_s">点击打开阅读界面</string>
    <string name="refresh">重新加载</string>
    <string name="stop">停止</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="set_timer">定时</string>
    <string name="read_aloud_pause">朗读暂停</string>
    <string name="read_aloud_timer">正在朗读(还剩%d分钟)</string>
    <string name="pt_hide_navigation_bar">隐藏导航栏</string>
    <string name="re_navigation_bar_color">导航栏颜色</string>
    <string name="can_not_open">无法打开</string>
    <string name="add_book_url">添加书籍网址</string>
    <string name="author">作者</string>
    <string name="aloud_stop">朗读停止</string>
    <string name="action_save">保存</string>
    <string name="edit_book_source">编辑书源</string>
    <string name="disable_book_source">禁用书源</string>
    <string name="add_book_source">新建书源</string>
    <string name="copy_source">拷贝书源</string>
    <string name="paste_source">粘贴书源</string>
    <string name="camera_scan">扫描二维码</string>
    <string name="rule_summary">规则说明</string>
    <string name="flow_sys">跟随系统</string>
    <string name="add">添加</string>
    <string name="import_book_source">导入书源</string>
    <string name="import_book_source_local">本地导入</string>
    <string name="import_book_source_on_line">网络导入</string>
    <string name="replace_rule_title">替换净化</string>
    <string name="replace_rule_edit">替换规则编辑</string>
    <string name="replace_rule">替换规则</string>
    <string name="replace_to">替换为</string>
    <string name="img_cover">封面</string>
    <string name="book">书</string>
    <string name="volume_open_page">音量键翻页</string>
    <string name="click_open_page">点击翻页</string>
    <string name="click_all_next_page">点击总是翻下一页</string>
    <string name="keep_light">屏幕超时</string>
    <string name="back">返回</string>
    <string name="menu">菜单</string>
    <string name="adjust">调节</string>
    <string name="replace_rule_summary">替换规则名称</string>
    <string name="select_all">全选</string>
    <string name="night_theme">夜间模式</string>
    <string name="welcome">启动页</string>
    <string name="update_search_threads_num">更新和搜索线程数,如感觉卡顿请减小线程数,量力而行</string>
    <string name="change_icon">切换图标</string>
    <string name="remove_from_bookshelf">删除书籍</string>
    <string name="start_read">优化阅读</string>
    <string name="data_loading">加载数据中…</string>
    <string name="load_error_retry">加载失败,点击重试</string>
    <string name="book_intro">内容简介</string>
    <string name="origin">来源</string>
    <string name="import_replace_rule">本地导入</string>
    <string name="import_replace_rule_on_line">网络导入</string>
    <string name="bookshelf_px">书架排序</string>
    <string name="bookshelf_px_0">按阅读时间排序</string>
    <string name="bookshelf_px_1">按更新时间排序</string>
    <string name="bookshelf_px_2">手动排序</string>
    <string name="bookshelf_show">书架进度显示</string>
    <string name="bookshelf_show_0">显示更新提示</string>
    <string name="bookshelf_show_1">显示进度条</string>
    <string name="bookshelf_show_2">手动排序</string>
    <string name="del_select">删除所选</string>
    <string name="del_msg">是否确认删除?</string>
    <string name="clear_font">默认字体</string>
    <string name="del_all">删除所有</string>
    <string name="showTitle">正文显示标题</string>
    <string name="no_last_chapter">无最新章节信息</string>
    <string name="showTimeBattery">显示时间和电量</string>
    <string name="showLine">显示分隔线</string>
    <string name="darkStatusIcon">深色状态栏图标</string>
    <string name="content">内容</string>
    <string name="copy_text">拷贝内容</string>
    <string name="download_all">一键缓存</string>
    <string name="content_sl">这是一段测试文字\n\u3000\u3000只是让你看看效果的</string>
    <string name="immersion_status_bar">沉浸式状态栏</string>
    <string name="un_download">还剩%d章未下载</string>
    <string name="loading">加载中…</string>
    <string name="bookmark">书签</string>
    <string name="bookmark_add">添加书签</string>
    <string name="action_del">删除</string>
    <string name="clear_bookshelf_s">这将会删除所有书籍，请谨慎操作。</string>
    <string name="clear_content">清除缓存</string>
    <string name="search_book_source">搜索书源</string>
    <string name="search_book_source_num">%d个书源</string>
    <string name="text">文字</string>
    <string name="progress_show">进度 %d/%d</string>
    <string name="tts_fix">请安装并选择中文TTS!</string>
    <string name="tts_init_failed">TTS初始化失败!</string>
    <string name="jf_convert">简繁转换</string>
    <string name="jf_convert_o">关闭</string>
    <string name="jf_convert_f">简转繁</string>
    <string name="jf_convert_j">繁转简</string>
    <string name="page_mode">翻页模式</string>
    <string name="nb_file_sub_count">%1$d 项</string>
    <string name="nb_file_path">存储卡:</string>
    <string name="nb_file_add_shelf">加入书架</string>
    <string name="nb_file_add_shelves">加入书架(%1$d)</string>
    <string name="fonts_folder">请将字体文件放到SD根目录Fonts文件夹下重新选择</string>
    <string name="default_font">默认字体</string>
    <string name="select_font">选择字体</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="to_top">置顶</string>
    <string name="auto_expand_find">自动展开发现</string>
    <string name="default_expand_first">默认展开第一组发现</string>
    <string name="threads_num">当前线程数 %s</string>
    <string name="read_aloud_speed">朗读语速</string>
    <string name="auto_next_page">自动翻页</string>
    <string name="auto_next_page_stop">停止自动翻页</string>
    <string name="auto_next_page_speed">自动翻页间隔</string>
    <string name="book_info">书籍信息</string>
    <string name="ps_default_read">默认打开书架</string>
    <string name="pt_default_read">自动跳转最近阅读</string>
    <string name="use_to">替换范围，选填书名或者源名</string>
    <string name="menu_action_group">分组</string>
    <string name="download_path">内容缓存路径</string>
    <string name="sys_file_picker">系统文件选择器</string>
    <string name="new_version">新版本</string>
    <string name="download_update">下载更新</string>
    <string name="aloud_volume_page">朗读时音量键翻页</string>
    <string name="disable_update">禁止更新</string>
    <string name="allow_update">允许更新</string>
    <string name="revert_selection">反转选择</string>
    <string name="debug_hint">书名、作者、URL</string>
    <string name="pt_show_all_find">显示所有发现</string>
    <string name="ps_show_all_find">关闭则只显示勾选源的发现</string>
    <string name="pt_show_all_js_find">显示所有JS发现</string>
    <string name="ps_show_js_find">关闭则只显示没有JS的发现</string>
    <string name="no_find">没有发现，可以在书源里添加。</string>
    <string name="update_chapter">更新目录</string>
    <string name="txt_chapter_regex">txt目录正则</string>
    <string name="set_charset">设置编码</string>
    <string name="sort">排序</string>
    <string name="sort_auto">智能排序</string>
    <string name="sort_manual">手动排序</string>
    <string name="sort_pin_yin">拼音排序</string>
    <string name="go_to_top">滚动到顶部</string>
    <string name="go_to_bottom">滚动到底部</string>
    <string name="pursue_more">追更</string>
    <string name="fattening">养肥</string>
    <string name="finish">完结</string>
    <string name="all_book">所有书籍</string>
    <string name="pursue_more_book">追更书籍</string>
    <string name="fattening_book">养肥书籍</string>
    <string name="finish_book">完结书籍</string>
    <string name="local_book">本地书籍</string>
    <string name="status_bar_immersion">状态栏颜色透明</string>
    <string name="navigation_bar_color_change">导航栏变色</string>
    <string name="navigation_bar_color_change_s">导航栏根据夜间模式变化</string>
    <string name="add_to_shelf">放入书架</string>
    <string name="continue_read">优化阅读</string>
    <string name="cover_path">封面地址</string>
    <string name="page_mode_COVER">覆盖</string>
    <string name="page_mode_SIMULATION">仿真</string>
    <string name="page_mode_SLIDE">滑动</string>
    <string name="page_mode_SCROLL">滚动</string>
    <string name="page_mode_NONE">无动画</string>
    <string name="up_change_source_last_chapter_t">后台更新换源最新章节</string>
    <string name="up_change_source_last_chapter_s">开启则会在软件打开1分钟后开始更新</string>
    <string name="behavior_main_t">书架ToolBar自动隐藏</string>
    <string name="behavior_main_s">滚动书架时ToolBar自动隐藏与显示</string>
    <string name="login">登录</string>
    <string name="success">成功</string>
    <string name="source_no_login">当前源没有配置登陆地址</string>
    <string name="book_source_name">书源名称(bookSourceName)</string>
    <string name="book_source_url">书源URL(bookSourceUrl)</string>
    <string name="book_source_group">书源分组(bookSourceGroup)</string>
    <string name="book_source_login_url">登录URL(loginUrl)</string>
    <string name="rule_book_author">作者规则(ruleBookAuthor)</string>
    <string name="rule_book_content">正文规则(ruleBookContent)</string>
    <string name="rule_book_name">书名规则(ruleBookName)</string>
    <string name="rule_chapter_list">目录列表规则(ruleChapterList)</string>
    <string name="rule_chapter_name">章节名称规则(ruleChapterName)</string>
    <string name="rule_chapter_list_url">目录URL规则(ruleChapterUrl)</string>
    <string name="rule_chapter_list_url_next">目录下一页规则(ruleChapterUrlNext)</string>
    <string name="clear_bookshelf">清空书架</string>
    <string name="clearHistory">清空搜索记录</string>
</resources>