<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/background_card">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/tv_text_replace"
                android:text="@string/replace_rule_edit"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_replace_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/tv_text_replace_hint"
                android:theme="@style/MyEditText"
                android:hint="@string/replace_rule_summary">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tie_replace_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_replace_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/tv_text_replace_hint"
                android:theme="@style/MyEditText"

                android:hint="@string/replace_rule">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tie_replace_rule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_use_regex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/tv_text_default"
                android:theme="@style/MyEditText"
                android:text="使用正则表达式" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_replace_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/tv_text_replace_hint"
                android:theme="@style/MyEditText"

                android:hint="@string/replace_to">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tie_replace_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_use_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/tv_text_replace_hint"
                android:theme="@style/MyEditText"

                android:hint="@string/use_to">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tie_use_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/selector_fillet_btn_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/cancel"
                android:textColor="@color/tv_text_default" />

            <Space
                android:layout_width="3dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/selector_fillet_btn_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/ok"
                android:textColor="@color/tv_text_default" />
        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>