<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.kunfei.bookshelf.widget.views.ATECheckBox
            android:id="@+id/cb_book_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/tv_text_default" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/iv_edit_source"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/colorTextSecondary"
                android:textSize="13sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/iv_top_source"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/to_top"
                android:textColor="@color/colorTextSecondary"
                android:textSize="13sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/iv_del_source"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/colorTextSecondary"
                android:textSize="13sp" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/btn_bg_press" />
</LinearLayout>